fix: absolute paths to relative paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="js/utils/LevelProfiles.js"></script>
     <script src="js/utils/constants.js"></script>
     <script src="js/utils/config.js"></script>
@@ -32,13 +32,13 @@
 
         <div class="column">
             Made with &#10084;&#65039; at
-            <img src="/assets/tuwaiq.png" alt="Tuwaiq Logo" width="35px" height="30px">
+            <img src="assets/tuwaiq.png" alt="Tuwaiq Logo" width="35px" height="30px">
         </div>
 
         <div id="column">
-            <img class="ctrl-btn" src="/assets/full-screen.svg" alt="full-screen" onclick="toggleFulLScreen()">
-            <img class="ctrl-btn" src="/assets/reset.svg" alt="reset" onclick="level.reset()">
-            <img class="ctrl-btn" src="/assets/free-move.svg" alt="movement" id="movement-controller" onclick="toggleMovementControl()">
+            <img class="ctrl-btn" src="assets/full-screen.svg" alt="full-screen" onclick="toggleFulLScreen()">
+            <img class="ctrl-btn" src="assets/reset.svg" alt="reset" onclick="level.reset()">
+            <img class="ctrl-btn" src="assets/free-move.svg" alt="movement" id="movement-controller" onclick="toggleMovementControl()">
         </div>
     </footer>
 </body>
